# plato-ai-skill

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
scripts/: check_apis.py
src/ai_skill/: __init__.py  __main__.py
src/ai_skill/core/: __init__.py  graph.py  history.py  key_loader.py  llm_client.py  nodes.py  pipeline_stages.py  project_workspace.py  rag.py  state.py  url_safety.py  workspace.py
src/ai_skill/prompts/: __init__.py  alignment.py  collection.py  design.py  evaluation.py  literature.py  planning.py
src/ai_skill/skills/: __init__.py  base.py  registry.py
src/ai_skill/skills/article_search/: __init__.py  skill.py
src/ai_skill/skills/content_summarizer/: __init__.py  skill.py
src/ai_skill/skills/exa_search/: skill.py
src/ai_skill/skills/firecrawl_scraper/: skill.py
src/ai_skill/skills/google_drive/: __init__.py  skill.py
src/ai_skill/skills/pdf_reader/: __init__.py  skill.py
src/ai_skill/skills/tavily_search/: skill.py
src/ai_skill/skills/web_search/: __init__.py  skill.py
tests/contract/: test_skill_contract.py
tests/smoke/: test_graph_compiles.py
tests/unit/core/: test_cp3_nodes.py
tests/unit/prompts/: test_design_prompts.py
